--- a/Week_1_Python/Day_1/Assignment.ipynb
+++ b/Week_1_Python/Day_1/Assignment.ipynb
@@ -84,28 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false,
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Placeholder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def NOS():\n",
-    "    print(\"Placeholder\")\n",
-    "    # your code here  \n",
-    "\n",
-    "NOS()"
+    "# your code here  \n",
+    "\n"
    ]
   },
   {
@@ -142,11 +131,8 @@
     }
    ],
    "source": [
-    "def NOS():\n",
-    "    print(\"Placeholder\")\n",
-    "    # your code here  \n",
-    "\n",
-    "NOS()"
+    "# your code here  \n",
+    "\n"
    ]
   },
   {
@@ -175,11 +161,8 @@
     }
    ],
    "source": [
-    "def NOS():\n",
-    "    print(\"Placeholder\")\n",
-    "    # your code here  \n",
-    "\n",
-    "NOS()"
+    "# your code here  \n",
+    "\n"
    ]
   },
   {
@@ -187,14 +170,14 @@
    "metadata": {},
    "source": [
     "### D)\n",
-    "Modify the solution to print the answer as a sentence \"it would require 52 european swallows to carry a coconut weighing 1200 grams\"\n",
+    "Modify the solution to print the answer as a sentence e.g. \"it would require 60 European swallows to carry a coconut weighing 1200 grams\"\n",
     "\n",
     "Tip: use string interpolation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -211,12 +194,8 @@
     }
    ],
    "source": [
-    "def NOS():\n",
-    "    world = \"Neuro-insight\"\n",
-    "    print(f'Hello {world}!')\n",
-    "    # your code here  \n",
-    "\n",
-    "NOS()"
+    "world = \"Neuro-insight\"\n",
+    "print(f'Hello {world}!')\n"
    ]
   },
   {
@@ -252,11 +231,8 @@
     }
    ],
    "source": [
-    "def NOS():\n",
-    "    print(\"Placeholder\")\n",
-    "    # your code here  \n",
-    "\n",
-    "NOS()"
+    "# your code here  \n",
+    "\n"
    ]
   },
   {
@@ -285,11 +261,8 @@
     }
    ],
    "source": [
-    "def NOS():\n",
-    "    print(\"Placeholder\")\n",
-    "    # your code here  \n",
-    "\n",
-    "NOS()"
+    "# your code here  \n",
+    "\n"
    ]
   },
   {
@@ -319,11 +292,8 @@
     }
    ],
    "source": [
-    "def NOS():\n",
-    "    print(\"Placeholder\")\n",
-    "    # your code here  \n",
-    "\n",
-    "NOS()"
+    "# your code here  \n",
+    "\n"
    ]
   },
   {
@@ -351,7 +321,7 @@
     "\n",
     "\n",
     "### A)\n",
-    "There are three provided files. \"Curcuit.txt\", \"Filler.txt\" and \"Behavior.txt\"\n",
+    "There are three provided files. \"Circuit.txt\", \"Filler.txt\" and \"Behavior.txt\"\n",
     "The goal is simple. when called the method new_paper should return a string combining a circuit a filler and a behavior in this order. \n",
     "this essentially makes a new concept like \"Theta-gamma coupling at the temporal lobe shapes coconut carrying behavior\", \n",
     "this can be done by picking a random line from each file and combining them. "
@@ -402,10 +372,14 @@
     }
    },
    "source": [
-    "Tips: The files are in utf-8 encoding so read them with the parameter \n",
-    ">encoding=\"utf8\" \n",
+    "<div class=\"alert alert-info\">\n",
+    "    <ul>\n",
+    "        <li><b>Tip:</b> The files are in utf-8 encoding so read them with the parameter encoding=\"utf8\" </li>\n",
+    "        <li><b>Tip:</b> string uses slash to include special characters like newline = \\n you might have to use double slash \\\\ or string raw format r'' in order to succeed </li>\n",
+    "        <li><b>Tip:</b> if you cant find the file using a relative path, use an absolute path to the txt file. </li>\n",
+    "    </ul>\n",
+    "</div>\n",
     "\n",
-    "Tips 2: if you cant find the file using a direct path, use an absolute path to the txt file.\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "  <b>Warning:</b> Neuro-insight is not responsible for the publishability or community backlash from said paper, publishability may vary.\n",
@@ -436,7 +410,12 @@
    },
    "source": [
     "### B)\n",
-    "Create method that writes the result of the previous method to a file "
+    "Create method that writes the result of the previous method to a the file Future_work.txt. \n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "    <b>Tip:</b> The files are in utf-8 encoding so wr them with the parameter encoding=\"utf8\" \n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
@@ -498,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   },
   "pycharm": {
    "stem_cell": {
