--- a/Week_1_Python/Day_1/Assignment.ipynb
+++ b/Week_1_Python/Day_1/Assignment.ipynb
@@ -413,7 +413,7 @@
     "Create method that writes the result of the previous method to a the file Future_work.txt. \n",
     "\n",
     "<div class=\"alert alert-info\">\n",
-    "    <b>Tip:</b> The files are in utf-8 encoding so wr them with the parameter encoding=\"utf8\" \n",
+    "    <b>Tip:</b> remember the encoding.\n",
     "</div>\n",
     "\n"
    ]
