--- a/Week_1_Python/Day_3/Assignment_3.ipynb
+++ b/Week_1_Python/Day_3/Assignment_3.ipynb
@@ -342,7 +342,11 @@
    "cell_type": "code",
    "execution_count": 227,
    "id": "5a620265",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Code"
@@ -366,6 +370,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
