--- a/Week_1_Python/Day_3/Lesson.ipynb
+++ b/Week_1_Python/Day_3/Lesson.ipynb
@@ -626,7 +626,7 @@
     "\n",
     "$$(\\frac{1}{n})\\sum_{i=1}^{n}  (y_{i} - x_{i} )^2 $$\n",
     "\n",
-    "$$(\\frac{1}{n})\\sum_{i=1}^{n}\\left | y_{i} - x_{i} \\right |$$"
+    "$$\\sqrt{\\frac{1}{n})\\sum_{i=1}^{n}  (y_{i} - x_{i} )^2}$$"
    ]
   },
   {
